[package]
name = "system_e"
edition.workspace = true
version.workspace = true

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
rand = "0"
scope-guard = "1"
crc32fast = "1.4.2"
